# StaticAnalysis

./: README.md
project1/: README.txt  setup
project1/FirstProject/: CMakeLists.txt  Makefile
project1/FirstProject/lib/: FirstProject.cpp
project1/lib/: CMakeLists.txt
project2/: CMakeLists.txt  Makefile  README.txt  setup.sh
project2/RangeAnalysis/: DeadCodeElimination.cpp
project3/: arith.elf  arith.thm  list.elf  list.thm  sources.cfg
